# python_infosearch

./: .env  .gitignore  README.md  index.txt  lemmes.txt  pyproject.toml  r_index.txt  tokens.txt
posts/: 1374889.txt  1374892.txt  1374896.txt  1374900.txt  1374905.txt  1374910.txt  1374913.txt  1374915.txt  1374923.txt  1374927.txt  1374929.txt  1374942.txt  1374954.txt  1374959.txt  1374963.txt  1374964.txt  1374966.txt  1374968.txt  1374988.txt  1374991.txt  1375002.txt  1375004.txt  1375009.txt  1375020.txt  1375026.txt  1375032.txt  1375039.txt  1375042.txt  1375051.txt  1375067.txt  1375075.txt  1375088.txt  1375089.txt  1375090.txt  1375091.txt  1375093.txt  1375096.txt  1375100.txt  1375103.txt  1375104.txt  (+60 more)
task1/: task1.py
task2/: task2.py
task3/: search.py  task3.py
task4/: task4.py
task5/: index.html  server.py  task5.py
tf_idf/: lemmes1374785.txt  lemmes1374792.txt  lemmes1374797.txt  lemmes1374803.txt  lemmes1374804.txt  lemmes1374805.txt  lemmes1374807.txt  lemmes1374809.txt  lemmes1374819.txt  lemmes1374820.txt  lemmes1374822.txt  lemmes1374823.txt  lemmes1374825.txt  lemmes1374827.txt  lemmes1374829.txt  lemmes1374833.txt  lemmes1374836.txt  lemmes1374840.txt  lemmes1374841.txt  lemmes1374844.txt  lemmes1374847.txt  lemmes1374851.txt  lemmes1374855.txt  lemmes1374857.txt  lemmes1374858.txt  lemmes1374863.txt  lemmes1374868.txt  lemmes1374870.txt  lemmes1374872.txt  lemmes1374880.txt  lemmes1374885.txt  lemmes1374889.txt  lemmes1374892.txt  lemmes1374896.txt  lemmes1374900.txt  lemmes1374905.txt  lemmes1374910.txt  lemmes1374913.txt  (+224 more)
